--- a/scenery/1.html
+++ b/scenery/1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
 	<title>Document</title>
 </head>
 <style type="text/css">
@@ -11,7 +12,7 @@
 	}
 	.header4 li{
 		display: inline-block;
-		width:15%;
+		width:14%;
 		padding-top: 2%;
 	}
 	.header4 li:first-child{
@@ -40,6 +41,9 @@
 	.footer4 ul{
 		margin-left: 2%;
 	}
+	section img{
+		width:40%;
+	}
 </style>
 <body>
 	<img src="1.png" usemap="#nongchang" style="position: absolute;z-index: -1;height:100%;width:100%;" alt="">
@@ -57,7 +61,7 @@
 			</div>
 		</header>
 		<section>
-			<img src="empty.png" style="position: absolute;right: 2%;top: 65%;" alt="">
+			<img src="empty.png" style="position: absolute;right: 2%;top: 62%;" alt="">
 		</section>
 		<footer class="footer4">
 			<ul>
